--- a/assets/scss/home-user.scss
+++ b/assets/scss/home-user.scss
@@ -1448,6 +1448,7 @@ body {
     .artists-slider{
       padding: 0 1rem;
       margin-top: 3rem;
+      overflow: visible;
       .swiper-slide{
         max-width: 18.375rem;
       }
